--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">AndroidCompanion</string>
     <string name="action_settings">Settings</string>
+    <string name="launch_activity">Launch activity</string>
     <string name="listingUserText">List of connected Devices : </string>
     <string name="deviceId">Device Id : </string>
     <string name="deviceName">Device Name : </string>
