--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="disconnect_device">Disconnect</string>
+    <string name="connect_device">Connect</string>
 
     <string name="yes">Yes</string>
     <string name="yes_ale">Yes, the ALE way!</string>
