--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">AndroidCompanion</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Activer Notifications</string>
     <string name="launch_activity">Launch activity</string>
     <string name="listingUserText">List of connected Devices : </string>
     <string name="deviceId">Device Id : </string>
@@ -17,4 +17,11 @@
     <string name="yes">Yes</string>
     <string name="yes_ale">Yes, the ALE way!</string>
     <string name="no">No</string>
+    <string name="send_notification_activated">Envoyer autres notifications</string>
+    <string name="send_sms_notifications">Envoyer notifications SMS</string>
+    <string name="send_call_notifications">Envoyer notifcations appel</string>
+    <string name="receive_call_order">Recevoir ordre d\'appel</string>
+    <string name="receive_sms_order">Recevoir ordre d\'envoi SMS</string>
+    <string name="action_configuration">Configuration par défaut des appareils</string>
+    <string name="device_settings">Settings</string>
 </resources>
