Disabled save manager for rework Reworked device settings Device settings effective

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,9 @@
     <string name="yes">Yes</string>
     <string name="yes_ale">Yes, the ALE way!</string>
     <string name="no">No</string>
-    <string name="send_notification_activated">Envoyer autres notifications</string>
-    <string name="send_sms_notifications">Envoyer notifications SMS</string>
-    <string name="send_call_notifications">Envoyer notifcations appel</string>
     <string name="receive_call_order">Recevoir ordre d\'appel</string>
     <string name="receive_sms_order">Recevoir ordre d\'envoi SMS</string>
+    <string name="enable_notifs">Activate notifications</string>
     <string name="action_configuration">Configuration par défaut des appareils</string>
     <string name="device_settings">Settings</string>
 </resources>
