--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="receive_sms_order">Recevoir ordre d\'envoi SMS</string>
     <string name="enable_notifs">Activate notifications</string>
     <string name="device_settings">Settings</string>
+    <string name="device_remove">Remove</string>
 </resources>
